/**
 * Copyright 2020 DreamWorks Animation L.L.C.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  package_name: "ai.forestflow.domain"
  flat_package: true
  single_file: true
  preamble: ["sealed trait PrintableContract {",
   "this: Contract => ",
   "override def toString : String = s\"$organization.$project.$contractNumber\"",
   "}"
  ]
};


message Contract {
    option (scalapb.message).extends = "PrintableContract";

    required string organization = 1;
    required string project = 2;
    required int32 contract_number = 3;
}
