/**
 * Copyright 2020 DreamWorks Animation L.L.C.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

import "scalapb/scalapb.proto";
import "Contract.proto";

//import "google/protobuf/wrappers.proto";

option (scalapb.options) = {
  package_name: "com.dreamworks.forestflow.domain"
  flat_package: true
  import: "com.dreamworks.forestflow.serving.impl.PrintableFQRV"
};

message FQRV {
    option (scalapb.message).extends = "PrintableFQRV";

    required Contract contract = 1;
    required string release_version = 2;
}